png -> jpg (i'm stupid)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div style="text-align: center">
-      <img src="deed.png" style="height:600px;"/><br/>
+      <img src="deed.jpg" style="height:600px;"/><br/>
     </div>
   </body>
 </html>
